--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcc 'TX'
 - !lcsh 'Cooking, American'
 - !lcsh 'Menus'
+- GITenberg
 title: 'Food for the Traveler
 
   What to Eat and Why'
